<resources>
    <string name="app_name">Android Activity and Fragment Lifecycle</string>
    <string name="action_settings">Settings</string>
    <string name="display_name">Display Name</string>
    <string name="placeholder">Placeholder</string>
    <string name="label_first_last_name">First and last name</string>
    <string name="title_activity_b">BActivity</string>
    <string name="label_city">In which city do you live?</string>
    <string name="display_city">Display City</string>
    <string name="title_activity_c">CActivity</string>
    <string name="activity_c_header">Activity C</string>
    <string name="pause_activity">Pause Activity (Activity Dialog)</string>
    <string name="no_pause_activity">Do Not Pause Activity (Fragment Dialog)</string>
    <string name="display_activity_c">Display Activity C</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="button_close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="activity_b_header">Activity B</string>
    <string name="title_activity_d">DActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_d_header">Activity D</string>
    <string name="display_activity_d">Display Activity D</string>
</resources>
