<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="io.exponential.androidactivityandfragmentlifecycle.BActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_b_header"/>

    <Button
        android:id="@+id/activity_b_no_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_pause_activity"/>

    <Button
        android:id="@+id/activity_b_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_activity"/>

    <Button
        android:id="@+id/display_activity_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_activity_c"/>

    <Button
        android:id="@+id/display_activity_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_activity_d"/>

    <FrameLayout
        android:id="@+id/activity_b_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
